--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ description: >-                        # used by seo meta and the atom feed
 # Replace with the website url, e.g. 'https://username.github.io'
 url: 'https://S3ner.github.io'
 
-author: Cuihs                  # change to your full name
+author: S3ner                  # change to your full name
 
 avatar: /assets/img/sample/avatar.jpg   # support internet resources
 
