--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ twitter:
   username:             # change to your twitter username
 
 social:
-  name: Cuihs                  # it will shows as the copyright owner in Footer
+  name: S3ner                  # it will shows as the copyright owner in Footer
   email: Cuihs97@outlook.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
