--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 
 title: S3ner's Blog                         # the main title
 
-tagline: 深海不至云上  # it will display as the sub-title
+tagline: 𝘽𝙞𝙤.  # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
   A minimal, portfolio, sidebar,
