--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ twitter:
 
 social:
   name: Kimchi-dev                  # it will shows as the copyright owner in Footer
-  email: jtg14@naver.com             # change to your email address
+  email: tnine923@gmail.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
     # https://twitter.com/#      # change to your twitter homepage
